name:                cola
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jonathan S
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Monad.Partial
                     , Control.Monad.Partial.ST
                     , Data.COLA
                     , Data.Vector.Fusion.Stream.Merge
  build-depends:       base, mtl, free, vector
  hs-source-dirs:      src
