name:                cola
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jonathan S
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Monad.Partial
                     , Control.Monad.Partial.ST
                     , Data.COLA
                     , Data.Vector.Fusion.Stream.Merge
  build-depends:       base, mtl, free, vector
  hs-source-dirs:      src

benchmark main
  Type: exitcode-stdio-1.0
  HS-Source-Dirs: benchmarks
  Main-Is: COLA.hs
  Build-Depends: base, containers, cola, deepseq, criterion, vector
  ghc-options: -Wall
